# brief_15_HR-Pulse

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  seed_db.py  update_db.py
backend/ml/: ai.py  dataclean.ipynb  train_model.py
backend/ml/data/: cleaned-data.csv  final-ds-jobs-azure.csv  uploaded_test_data.csv
backend/ml/models/: model_features.pkl  salary_predictor.pkl
backend/tests/: test_main.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
infra/: .terraform.tfstate.lock.info  main.tf
